--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-custom-store",
+  "name": "@r29/react-redux-custom-store",
   "version": "1.0.0",
   "description": "Simple wrapper around react-redux to allow configuring and using connect with a custom store name.",
   "homepage": "https://github.com/emmenko/react-redux-custom-store",
@@ -17,8 +17,9 @@
     "test:watch": "watch 'npm test' lib test -d"
   },
   "peerDependencies": {
-    "react": ">=0.14",
-    "react-redux": ">=4"
+    "react": ">=15.0.0",
+    "react-redux": ">=4",
+    "prop-types": "https://registry.npmjs.org/prop-types/-/prop-types-15.6.0.tgz"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -36,11 +37,11 @@
     "eslint-plugin-react": "^4.1.0",
     "jsdom": "^8.1.0",
     "mversion": "^1.10.1",
-    "react": "^0.14.7",
+    "react": "^16.3.2",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
-    "redux": "^3.3.1",
+    "redux": "~4.0.0",
     "rimraf": "^2.5.2",
     "tap-spec": "^4.1.1",
     "tape": "^4.5.0",
